<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.constraint.Barrier
            android:id="@+id/barrier1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textView,textView5,textView2,textView4,textView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:text="@string/sensor_accelerometer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sensor_gravity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sensor_gyroscope"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sensor_linear_acceleration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sensor_rotation_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_accelerometer_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/tv_accelerometer_y"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_accelerometer_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_accelerometer_x"
            app:layout_constraintEnd_toStartOf="@+id/tv_accelerometer_z"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_accelerometer_x"
            app:layout_constraintTop_toTopOf="@+id/tv_accelerometer_x" />

        <TextView
            android:id="@+id/tv_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/tv_gravity_z"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/tv_gyroscope_y"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/tv_rotation_vector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/tv_rotation_vector_y"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/tv_accelerometer_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_accelerometer_y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_accelerometer_y"
            app:layout_constraintTop_toTopOf="@+id/tv_accelerometer_y" />

        <TextView
            android:id="@+id/tv_gravity_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gravity"
            app:layout_constraintEnd_toStartOf="@+id/tv_gravity_y"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_gravity"
            app:layout_constraintTop_toTopOf="@+id/tv_gravity" />

        <TextView
            android:id="@+id/tv_gyroscope_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gyroscope"
            app:layout_constraintEnd_toStartOf="@+id/tv_gyroscope_z"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_gyroscope"
            app:layout_constraintTop_toTopOf="@+id/tv_gyroscope" />

        <TextView
            android:id="@+id/tv_gyroscope_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gyroscope_y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_gyroscope_y"
            app:layout_constraintTop_toTopOf="@+id/tv_gyroscope_y" />

        <TextView
            android:id="@+id/tv_gravity_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gravity_z"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_gravity_z"
            app:layout_constraintTop_toTopOf="@+id/tv_gravity_z" />

        <TextView
            android:id="@+id/tv_rotation_vector_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rotation_vector_y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_rotation_vector_y"
            app:layout_constraintTop_toTopOf="@+id/tv_rotation_vector_y" />

        <TextView
            android:id="@+id/tv_rotation_vector_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rotation_vector"
            app:layout_constraintEnd_toStartOf="@+id/tv_rotation_vector_z"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_rotation_vector"
            app:layout_constraintTop_toTopOf="@+id/tv_rotation_vector" />

        <TextView
            android:id="@+id/tv_linear_accel_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/tv_linear_accel_y"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_linear_accel_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_linear_accel_x"
            app:layout_constraintEnd_toStartOf="@+id/tv_linear_accel_z"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_linear_accel_x"
            app:layout_constraintTop_toTopOf="@+id/tv_linear_accel_x" />

        <TextView
            android:id="@+id/tv_linear_accel_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/not_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_linear_accel_y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_linear_accel_y"
            app:layout_constraintTop_toTopOf="@+id/tv_linear_accel_y" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/coord_x"
            app:layout_constraintEnd_toEndOf="@+id/tv_accelerometer_x"
            app:layout_constraintStart_toStartOf="@+id/tv_accelerometer_x"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/coord_y"
            app:layout_constraintEnd_toEndOf="@+id/tv_accelerometer_y"
            app:layout_constraintStart_toStartOf="@+id/tv_accelerometer_y"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/coord_z"
            app:layout_constraintEnd_toEndOf="@+id/tv_accelerometer_z"
            app:layout_constraintStart_toStartOf="@+id/tv_accelerometer_z"
            app:layout_constraintTop_toTopOf="@+id/textView10" />
    </android.support.constraint.ConstraintLayout>

</layout>